# TinyMCP

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  MCP_ROADMAP_IMPLEMENTATION.md  PHASE_1_COMPLETE.md  PR_DESCRIPTION.md  README.md  Readme.md  conanfile.py  config.ini  go.mod  go.sum  west-ncs.yml  west.yml
.gemini/: settings.json
.github/workflows/: ci.yml  release.yml
Example/MCPClient/Source/: Main.cpp
Example/MCPServer/Source/: EchoServer.cpp  MCPServer.cpp
Source/Protocol/Message/: Notification.cpp  Notification.h  Request.cpp  Request.h  Response.cpp  Response.h
Source/Protocol/Public/: Config.cpp  Config.h  PublicDef.h
Source/Protocol/Session/: Session.cpp  Session.h
Source/Protocol/Task/: BasicTask.cpp  BasicTask.h
Source/Protocol/Transport/: HttpSseTransport.cpp  HttpSseTransport.h  Transport.h
examples/blinky/: Kconfig  README.md  prj.conf  state.json
examples/blinky/src/: main.c
mcp_sdk/: CMakeLists.txt  CMakeLists_simple.txt  IMPLEMENTATION_STATUS.md  README.md  SDK_SUMMARY.md
mcp_sdk/examples/: client_example.cpp  echo_client.cpp  echo_server.cpp  server_example.cpp
mcp_sdk/include/mcp/: capabilities.hpp  client.hpp  error.hpp  error_simple.hpp  mcp.hpp  message.hpp  prompts.hpp  resources.hpp  server.hpp  tools.hpp  transport.hpp  types.hpp  types_simple.hpp
mcp_sdk/include/mcp/examples/: basic_client.hpp  basic_server.hpp
mcp_sdk/include/mcp/utils/: json.hpp  logger.hpp  thread_pool.hpp
mcp_sdk/src/capabilities/: capabilities.cpp
mcp_sdk/src/client/: client.cpp
mcp_sdk/src/core/: error.cpp  error_simple.cpp  message.cpp  types.cpp  types_simple.cpp
mcp_sdk/src/examples/: basic_client.cpp  basic_server.cpp
mcp_sdk/src/prompts/: prompts.cpp
mcp_sdk/src/resources/: resources.cpp
mcp_sdk/src/server/: server.cpp
mcp_sdk/src/tools/: tools.cpp
mcp_sdk/src/transport/: http_transport.cpp  sse_transport.cpp  stdio_transport.cpp  websocket_transport.cpp
mcp_sdk/src/utils/: json.cpp  logger.cpp  logger_simple.cpp  thread_pool.cpp  thread_pool_simple.cpp
mcp_sdk/tests/: test_error.cpp  test_error_simple.cpp  test_message.cpp  test_simple.cpp  test_types.cpp  test_types_simple.cpp
scripts/: aws_upload.sh
server/: main.go
server/internal/client/: client.go
server/internal/server/: server.go
src/Examples/: MCPServerManagerCLI.cpp
src/Interfaces/: IMCPDownloader.hpp  IMCPManager.hpp  MCPDownloadManager.cpp
src/MCP/: MCPServerWrapper.hpp
src/Public/: Core.hpp
src/Utils/: GitHubAPI.hpp  MCPConfigParser.hpp
tests/: CMakeLists.txt  smoketest.cpp  test_basic.cpp  test_mcp_integration.cpp
